--- a/src/components/pages/Gallery/Gallery.css
+++ b/src/components/pages/Gallery/Gallery.css
@@ -1,3 +1,26 @@
 .galery img{
     width: 100%;
 }
+.cta-bg {
+    background: #ededed;
+    padding: 100px 0;
+    text-align: center;
+}
+.cta-area h3 {
+    font-size: 40px;
+    font-weight: bold;
+    text-transform: capitalize;
+}
+.cta-area p {
+    margin-top: 20px;
+    font-size: 18px;
+    color: #000;
+}
+.buy-now-btn {
+    background: #000;
+    padding: 10px 20px;
+    border: 0;
+    border-radius: 6px;
+    font-weight: bold;
+    color: #fff;
+}
