--- a/src/components/pages/NotFound/NotFound.css
+++ b/src/components/pages/NotFound/NotFound.css
@@ -23,8 +23,8 @@
   margin: 0px;
   border-radius: 60px;
   padding: 16px 32px;
-  background-color: #ad8f67;
-  border: 1px solid #ad8f67;
+  background-color: #000;
+  border: 1px solid #000;
   color: #fff;
   /* list-style: none; */
 }
