--- a/src/components/pages/Register/Register.css
+++ b/src/components/pages/Register/Register.css
@@ -4,7 +4,7 @@
 .register-btn {
   width: 50%;
   font-size: 20px;
-  background-color: #ad8f67;
-  border: 1px solid #ad8f67;
+  background-color: #000;
+  border: 1px solid #000;
   color: #fff;
 }
